// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collectFee 1`] = `"Read Only Mode"`;

exports[`collectFee 2`] = `
Array [
  Array [
    "10000000000000000000",
  ],
  Array [
    "10000000000000000000",
  ],
]
`;

exports[`collectFee 3`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 40000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 2000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`collectFee 4`] = `
Array [
  Array [
    "account",
    40000,
    Object {},
  ],
  Array [
    "account",
    40000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 2000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`create 1`] = `"Read Only Mode"`;

exports[`create 2`] = `"createTxHash"`;

exports[`create 3`] = `"createTxHash"`;

exports[`create 4`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 250000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`create 5`] = `
Array [
  Array [
    "account",
    250000,
    Object {},
  ],
  Array [
    "account",
    250000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`endRound 1`] = `"Read Only Mode"`;

exports[`endRound 2`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`endRound 3`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 300000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 2000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`endRound 4`] = `
Array [
  Array [
    "account",
    300000,
    Object {},
  ],
  Array [
    "account",
    300000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 2000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`forceEndRound 1`] = `"Read Only Mode"`;

exports[`forceEndRound 2`] = `
Array [
  Array [
    "123000000000000000000",
    456,
  ],
  Array [
    "123000000000000000000",
    456,
  ],
]
`;

exports[`forceEndRound 3`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 300000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 2000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`forceEndRound 4`] = `
Array [
  Array [
    "account",
    300000,
    Object {},
  ],
  Array [
    "account",
    300000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 2000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`getAddress 1`] = `
Object {
  "aToken": "aToken",
  "bToken": "bToken",
  "collateralToken": "collateralToken",
  "feeCollector": "feeCollector",
  "operator": "operator",
  "oracle": "oracle",
  "roleManager": "roleManager",
}
`;

exports[`getStates 1`] = `
Object {
  "clearCommRate": 100000000000000,
  "collateral": 1,
  "createCommRate": 1.0000000000000001e+21,
  "feeBalance": 1000,
  "isKnockedIn": true,
  "iterationGasThreshold": 100000000000000000000,
  "lastOperationTime": 12345678980000,
  "lastPrice": 2,
  "lastPriceTime": 1e+23,
  "maturity": 1e+21,
  "minBalance": 100000,
  "nextResetAddrIndex": 1e+21,
  "operationCoolDown": 1e+24,
  "period": 1e+21,
  "preResetWaitingBlocks": 1000000000000000000,
  "priceFetchCoolDown": 1e+21,
  "redeemCommRate": 100000000000000,
  "resetPrice": 1e-9,
  "resetPriceTime": 1e+23,
  "roundStrike": 1,
  "state": "Loading",
  "totalSupplyA": 1e-13,
  "totalSupplyB": 1e-16,
  "totalUsers": 10000000000000000000,
}
`;

exports[`getUserAddress 1`] = `
Array [
  Array [
    1,
  ],
]
`;

exports[`redeem 1`] = `"Read Only Mode"`;

exports[`redeem 2`] = `"redeemTxHash"`;

exports[`redeem 3`] = `"redeemTxHash"`;

exports[`redeem 4`] = `
Array [
  Array [
    "1000000000000000000",
    "1000000000000000000",
  ],
  Array [
    "1000000000000000000",
    "1000000000000000000",
  ],
]
`;

exports[`redeem 5`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 160000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`redeem 6`] = `
Array [
  Array [
    "account",
    160000,
    Object {},
  ],
  Array [
    "account",
    160000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`setValue 1`] = `"Read Only Mode"`;

exports[`setValue 2`] = `
Array [
  Array [
    1,
    10,
  ],
  Array [
    1,
    10,
  ],
]
`;

exports[`setValue 3`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 50000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 2000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`setValue 4`] = `
Array [
  Array [
    "account",
    50000,
    Object {},
  ],
  Array [
    "account",
    50000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 2000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`startCustodian 1`] = `"Read Only Mode"`;

exports[`startCustodian 2`] = `
Array [
  Array [
    "aAddr",
    "bAddr",
    "oracleAddr",
    "123000000000000000000",
    true,
    true,
  ],
  Array [
    "aAddr",
    "bAddr",
    "oracleAddr",
    "123000000000000000000",
    true,
    true,
  ],
]
`;

exports[`startCustodian 3`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 400000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`startCustodian 4`] = `
Array [
  Array [
    "account",
    400000,
    Object {},
  ],
  Array [
    "account",
    400000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`startRound 1`] = `"Read Only Mode"`;

exports[`startRound 2`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`startRound 3`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 300000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 2000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`startRound 4`] = `
Array [
  Array [
    "account",
    300000,
    Object {},
  ],
  Array [
    "account",
    300000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 2000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`triggerPreReset 1`] = `"Read Only Mode"`;

exports[`triggerPreReset 2`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 240000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
      "nonce": 30,
    },
  ],
]
`;

exports[`triggerPreReset 3`] = `
Array [
  Array [
    "account",
    240000,
    Object {},
  ],
  Array [
    "account",
    240000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 30,
    },
  ],
]
`;

exports[`triggerReset 1`] = `"Read Only Mode"`;

exports[`triggerReset 2`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 4000000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`triggerReset 3`] = `
Array [
  Array [
    "account",
    4000000,
    Object {},
  ],
  Array [
    "account",
    4000000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 40,
    },
  ],
]
`;

exports[`updateFeeCollector 1`] = `"Read Only Mode"`;

exports[`updateFeeCollector 2`] = `
Array [
  Array [
    "account",
    1000000,
    Object {},
  ],
  Array [
    "account",
    1000000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`updateOperator 1`] = `"Read Only Mode"`;

exports[`updateOperator 2`] = `
Array [
  Array [
    "account",
    1000000,
    Object {},
  ],
  Array [
    "account",
    1000000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`updateOracle 1`] = `"Read Only Mode"`;

exports[`updateOracle 2`] = `
Array [
  Array [
    "newOracleAddress",
  ],
  Array [
    "newOracleAddress",
  ],
]
`;

exports[`updateOracle 3`] = `
Array [
  Array [
    "account",
    1000000,
    Object {},
  ],
  Array [
    "account",
    1000000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`updateRoleManager 1`] = `"Read Only Mode"`;

exports[`updateRoleManager 2`] = `
Array [
  Array [
    "newRoleManager",
  ],
  Array [
    "newRoleManager",
  ],
]
`;

exports[`updateRoleManager 3`] = `
Array [
  Array [
    "account",
    1000000,
    Object {},
  ],
  Array [
    "account",
    1000000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;
